<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">avatar</string>
    <string name="more_vertical">more vertical</string>
    <string name="likes">likes</string>
    <string name="views">views</string>
    <string name="shares">shares</string>
    <string name="post_text">post_text</string>
    <string name="description_post_like" translatable="false">description_post_like</string>
    <string name="menu_edit">menu_edit</string>
    <string name="menu_remove">menu_remove</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="edit_bar">edit_bar</string>
    <string name="cancel_button" translatable="false">cancel_button</string>
    <string name="description_post_save" translatable="false">description_post_save</string>
    <string name="description_post_cancel" translatable="false">description_post_cancel</string>
    <string name="play_video">play_video</string>
    <string name="title_activity_intent_handler" translatable="false">IntentHandlerActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="server_error">"Server error"</string>
    <string name="network_error">"Network error"</string>
    <string name="unknown_error">"Unknown error"</string>
    <string name="description_select_photo" translatable="false">Select photo</string>
    <string name="description_take_photo" translatable="false">Take photo</string>
    <string name="description_photo" translatable="false">Photo</string>
    <string name="remove" translatable="false">Remove</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
</resources>