<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OwnPostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing"
    tools:context=".activity.FeedFragment">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@sample/posts.json/data/authorAvatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author"/>

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:minHeight="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:srcCompat="@drawable/ic_baseline_more_vert_24"
        style="@style/Widget.AppTheme.SharesButton"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:barrierDirection="bottom"
        android:layout_margin="@dimen/common_spacing"
        app:constraint_referenced_ids="avatar,published,menu"
        />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toTopOf="@id/playVideoView"
        tools:text="@sample/posts.json/data/text" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/playVideoView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/barrierTwo"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:icon="@drawable/ic_baseline_play_arrow_24"
        android:text="@string/play_video"
        android:textColor="#ffffff"
        android:visibility="visible"
        />



    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nmedia"
        android:layout_marginTop="@dimen/common_spacing"
        android:visibility="visible"
        app:barrierDirection="bottom"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:constraint_referenced_ids="content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/likes"
        android:checkable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierTwo"
        app:icon="@drawable/ic_like_24"
        app:iconTint="@color/like_checkbox_tint"
        tools:text="@sample/posts.json/data/likes"
        style="@style/Widget.AppTheme.LikeButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_shares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/shares"
        android:textColor="@color/gray"
        app:icon="@drawable/ic_share_24"
        app:layout_constraintStart_toEndOf="@id/btn_likes"
        app:layout_constraintTop_toBottomOf="@id/barrierTwo"
        tools:text="@sample/posts.json/data/shares"
        style="@style/Widget.AppTheme.SharesButton"/>

    <ImageButton
        android:id="@+id/btn_views"
        android:layout_width="@dimen/small_icon"
        android:layout_height="@dimen/small_icon"
        android:layout_marginEnd="6dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/views"
        app:layout_constraintBottom_toBottomOf="@+id/text_views"
        app:layout_constraintEnd_toStartOf="@+id/text_views"
        app:layout_constraintTop_toTopOf="@+id/text_views"
        app:srcCompat="@drawable/ic_views_24" />

    <TextView
        android:id="@+id/text_views"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/small_icon"
        android:textColor="@color/gray"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/barrierTwo"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@sample/posts.json/data/views" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>